update, create footer

--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -8,3 +8,5 @@ $color-yellow: #f9d86b;
 $color-yellow-two: #ffc107;
 $color-error: #d0515a;
 $color-gray: #a6a8a8;
+$color-light-gray: rgba(245, 245, 245, .5);
+$color-shadow: rgba(33, 32, 31, 0.1);
