--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
     font-family: "RobotoRegular";
-    src: url("./fonts/RobotoRegular.ttf");
+    src: url("/online-food/fonts/RobotoRegular.ttf");
 }
 
 @font-face {
     font-family: "RobotoBold";
-    src: url("./fonts/RobotoBold.ttf");
+    src: url("/online-food/fonts/RobotoBold.ttf");
 }
 
 @font-face {
     font-family: "PoppinsSemiBold";
-    src: url("./fonts/PoppinsSemiBold.ttf");
+    src: url("/online-food/fonts/PoppinsSemiBold.ttf");
 }
 
 @font-face {
     font-family: "PoppinsLight";
-    src: url("./fonts/PoppinsLight.ttf");
+    src: url("/online-food/fonts/PoppinsLight.ttf");
 }
