create count dishes cart

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -413,6 +413,7 @@ body {
             font-size: 18px;
             font-family: RobotoBold,sans-serif;
             margin-right: 25px;
+            flex-shrink: 0;
         }
     }
 
