--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -161,9 +161,14 @@ body {
 }
 
 .slider {
-    //padding: 0 100px;
+    margin-bottom: 50px;
+
     &__item {
-        height: 500px;
+        //height: 500px;
+        width: 100%;
+        border-radius: 16px;
+        overflow: hidden;
+        //max-height: 500px;
 
         img {
             width: 100%;
@@ -224,10 +229,14 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        transition: box-shadow 0.3s linear;
+        transition: all 0.3s linear;
+        user-select: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
 
         &:hover {
             box-shadow: 0 2px 4px 0 $color-shadow;
+            transform: translateY(-5px);
         }
 
         &-img {
@@ -440,6 +449,16 @@ body {
             align-items: center;
             justify-content: center;
             font-size: 18px;
+            border-radius: 8px;
+            transition: all 0.3s linear;
+            cursor: pointer;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+
+            &:hover {
+                background-color: $color-yellow;
+            }
         }
 
         &-count {
@@ -553,10 +572,9 @@ body {
         //justify-content: space-between;
         transition: box-shadow 0.3s linear;
 
-        //&:hover {
-        //    //box-shadow: 0 2px 4px 0 rgba(33, 32, 31, 0.25);
-        //    box-shadow: 0 2px 4px 0 rgba(33, 32, 31, 0.08);
-        //}
+        &:hover {
+            box-shadow: 0 2px 4px 0 $color-shadow;
+        }
 
         &-img {
             height: 180px;
@@ -611,7 +629,8 @@ body {
             padding: 10px;
             background-color: $color-yellow;
             border: 1px solid $color-yellow;
-            border-radius: 50%;
+            //border-radius: 50%;
+            border-radius: 16px;
             //transition: background-color 0.3s linear;
             display: flex;
             align-items: center;
