--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -19,6 +19,11 @@ ul {
 	list-style: none;
 }
 
+input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
